@@ -147,6 +147,7 @@ char	*parse_key(char *, pmkobj *, size_t);
 char	*parse_data(char *, pmkobj *, size_t);
 prscell	*parse_cell(char *, htable *);
 bool	 parse_opt(char *, prsopt *, char *);
+bool	 parse_clopt(char *, prsopt *, char *);
 bool	 parse_node(FILE *, prsdata *, htable *, prscell *);
 bool	 parse_command(FILE *, prsdata *, prscell *);
 bool	 parse_line(FILE *, prsdata *, htable *, prsnode *);
