@@ -550,7 +550,7 @@ bool parse_cmdline(char **val, int nbval, pmkdata *pgd) {
 
 	for (i = 0 ; (i < nbval) && (rval == true) ; i++) {
 		/* parse option */
-		rval = parse_opt(val[i], &opt, PRS_PMKCONF_SEP);
+		rval = parse_clopt(val[i], &opt, PRS_PMKCONF_SEP);
 		if (rval == true) {
 			if (hash_update(ht, opt.key, opt.value) == HASH_ADD_FAIL) { /* no need to strdup */
 				errorf("%s.", PRS_ERR_HASH);
